--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 30 septiembre, 2022</h3>
+<div id="amg-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.52
+23.53
 </td>
 </tr>
 <tr>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.65
+24.66
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.07
+22.08
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 30 septiembre, 2022</h3>
+<div id="el-salto-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2741,7 +2741,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.59
+23.60
 </td>
 </tr>
 <tr>
@@ -2752,7 +2752,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.70
+24.71
 </td>
 </tr>
 <tr>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.05
+22.06
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 30 septiembre, 2022</h3>
+<div id="guadalajara-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.72
+24.73
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.11
+22.13
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 30 septiembre, 2022</h3>
+<div id="tlajomulco-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2855,7 +2855,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.34
+23.33
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.86
+21.85
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 30 septiembre, 2022</h3>
+<div id="tlaquepaque-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2912,7 +2912,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.57
+23.58
 </td>
 </tr>
 <tr>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.64
+24.65
 </td>
 </tr>
 <tr>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.00
+21.98
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 30 septiembre, 2022</h3>
+<div id="tonalá-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2969,7 +2969,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.49
+23.50
 </td>
 </tr>
 <tr>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.89
+21.92
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-30-septiembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 30 septiembre, 2022</h3>
+<div id="zapopan-01-octubre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 octubre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3037,7 +3037,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.78
+24.79
 </td>
 </tr>
 <tr>
@@ -3053,7 +3053,7 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-09-30 06:30:12</p>
+<p>Última actualización: 2022-10-01 06:30:13</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
