--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 30 noviembre, 2022</h3>
+<div id="amg-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.59
+23.60
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.96
+21.93
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 30 noviembre, 2022</h3>
+<div id="el-salto-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2768,13 +2768,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 30 noviembre, 2022</h3>
+<div id="guadalajara-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2798,7 +2798,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.78
+23.77
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.99
+21.97
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 30 noviembre, 2022</h3>
+<div id="tlajomulco-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2866,7 +2866,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.59
+24.57
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.76
+21.75
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 30 noviembre, 2022</h3>
+<div id="tlaquepaque-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.56
+24.55
 </td>
 </tr>
 <tr>
@@ -2939,13 +2939,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 30 noviembre, 2022</h3>
+<div id="tonalá-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.82
+21.78
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:32</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-30-noviembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 30 noviembre, 2022</h3>
+<div id="zapopan-01-diciembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 diciembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3026,7 +3026,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.60
+23.61
 </td>
 </tr>
 <tr>
@@ -3037,7 +3037,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.71
+24.69
 </td>
 </tr>
 <tr>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.13
+22.10
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-11-30 06:30:33</p>
+<p>Última actualización: 2022-12-01 06:30:10</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
