--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 diciembre, 2022</h3>
+<div id="amg-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.69
+24.70
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.99
+22.01
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 diciembre, 2022</h3>
+<div id="el-salto-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2768,13 +2768,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 diciembre, 2022</h3>
+<div id="guadalajara-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.77
+24.79
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.06
+22.09
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 diciembre, 2022</h3>
+<div id="tlajomulco-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2866,7 +2866,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.57
+24.58
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.72
+21.74
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 diciembre, 2022</h3>
+<div id="tlaquepaque-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.87
+21.88
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 diciembre, 2022</h3>
+<div id="tonalá-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2980,7 +2980,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.40
+24.41
 </td>
 </tr>
 <tr>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.96
+21.97
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-diciembre-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 diciembre, 2022</h3>
+<div id="zapopan-02-enero-2023" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 02 enero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3037,7 +3037,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.76
+24.77
 </td>
 </tr>
 <tr>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.13
+22.14
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-12-31 06:42:11</p>
+<p>Última actualización: 2023-01-02 06:33:24</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
