--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-31-enero-2023" class="section level3" data-height="100">
-<h3>AMG, 31 enero, 2023</h3>
+<div id="amg-01-febrero-2023" class="section level3" data-height="100">
+<h3>AMG, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2916,7 +2916,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.79
+24.80
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.07
+22.09
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-31-enero-2023" class="section level3" data-height="100">
-<h3>El Salto, 31 enero, 2023</h3>
+<div id="el-salto-01-febrero-2023" class="section level3" data-height="100">
+<h3>El Salto, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2973,7 +2973,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.88
+24.90
 </td>
 </tr>
 <tr>
@@ -2984,18 +2984,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.17
+22.22
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-31-enero-2023" class="section level3" data-height="100">
-<h3>Guadalajara, 31 enero, 2023</h3>
+<div id="guadalajara-01-febrero-2023" class="section level3" data-height="100">
+<h3>Guadalajara, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3019,7 +3019,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.71
+23.72
 </td>
 </tr>
 <tr>
@@ -3030,7 +3030,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.85
+24.87
 </td>
 </tr>
 <tr>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.17
+22.19
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-31-enero-2023" class="section level3" data-height="100">
-<h3>Tlajomulco, 31 enero, 2023</h3>
+<div id="tlajomulco-01-febrero-2023" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3087,7 +3087,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.67
+24.68
 </td>
 </tr>
 <tr>
@@ -3098,18 +3098,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.71
+21.74
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-31-enero-2023" class="section level3" data-height="100">
-<h3>Tlaquepaque, 31 enero, 2023</h3>
+<div id="tlaquepaque-01-febrero-2023" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3133,7 +3133,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.57
+23.58
 </td>
 </tr>
 <tr>
@@ -3144,7 +3144,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.68
+24.71
 </td>
 </tr>
 <tr>
@@ -3155,18 +3155,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.87
+21.91
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-31-enero-2023" class="section level3" data-height="100">
-<h3>Tonalá, 31 enero, 2023</h3>
+<div id="tonalá-01-febrero-2023" class="section level3" data-height="100">
+<h3>Tonalá, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3201,7 +3201,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.50
+24.51
 </td>
 </tr>
 <tr>
@@ -3212,18 +3212,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.13
+22.14
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-31-enero-2023" class="section level3" data-height="100">
-<h3>Zapopan, 31 enero, 2023</h3>
+<div id="zapopan-01-febrero-2023" class="section level3" data-height="100">
+<h3>Zapopan, 01 febrero, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3247,7 +3247,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.56
+23.55
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.23
+22.25
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-01-31 06:42:22</p>
+<p>Última actualización: 2023-02-01 06:30:18</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
